---
source: src/tests.rs
expression: ast
input_file: src/examples/valid/bool-int.ra
---
Main(([], [], [
    Decision(BinaryOperation(Eq, Integer(1), Bool(true)), [Write([Integer(1)])], None),
    Decision(BinaryOperation(Eq, Integer(1), Float(1)), [Write([Integer(2)])], None),
    Decision(BinaryOperation(Eq, Integer(1), String(1)), [Write([Integer(3)])], None),
]))
